<resources>
    <string name="app_name">Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="delete">Delete</string>


    <!-- Toast message in editor when new pet has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_save_product_successful">Product saved successfully</string>
    <string name="editor_delete_product_successful">Product deleted successfully</string>
    <string name="sale_product_successful">Sale Done</string>

    <!-- Toast message in editor when new pet has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_save_product_failed">Error with saving product</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="sale_product_failed">Error with Product Sale</string>

    <string name="product_valid_quantity">Product requires valid quantity</string>
    <string name="product_valid_price">Product requires valid price</string>
    <string name="product_valid_name">Product requires a name</string>
    <string name="update_not_supported_for">Update is not supported for</string>
    <string name="failed_to_insert_for">Failed to insert row for</string>
    <string name="cannot_query_for">Cannot query unknown URI</string>
    <string name="insert_not_supported_for">Insertion is not supported for</string>
    <string name="delete_not_supported_for">Deletion is not supported for</string>

    <!-- Title text for the empty view, which describes the empty inventory image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Your inventory is empty…</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="title_activity_editor">EditorActivity</string>
    <string name="add_product">Add a Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="hint_product_name">Enter product name</string>
    <string name="hint_product_price">Enter price</string>
    <string name="hint_product_quantity">Enter quantity</string>
    <string name="hint_supplier_name">Enter supplier name</string>
    <string name="hint_supplier_phone">Enter supplier phone</string>
    <string name="validation_empty_product_name">Please enter Product Name</string>
    <string name="validation_invalid_price">Invalid Price</string>
    <string name="validation_invalid_quantity">Invalid Quantity</string>
    <string name="validation_empty_supplier_name">Please enter Supplier Name</string>
    <string name="validation_empty_supplier_phone">Please enter Supplier Phone</string>
    <string name="alert_confirm_title">Confirm</string>
    <string name="alert_confirm_message">Are you sure you want to delete this product?</string>
    <string name="alert_confirm_yes">Yes</string>
    <string name="alert_confirm_cancel">Cancel</string>


    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
    <string name="list_item_price">Price:</string>
    <string name="list_item_quantity">Quantity:</string>
    <string name="list_item_currency">$</string>

    <string name="title_activity_details">Product Details</string>
    <string name="decrease_quantity">Decrease Quantity</string>
    <string name="increase_quantity">Increase Quantity</string>
    <string name="order_product">Order Product</string>
    <string name="access_granted">Access granted, try again now please.</string>
    <string name="access_denied">Oops, Access denied.</string>
</resources>
