<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.DetailsActivity"
    tools:showIn="@layout/activity_details">
    <!--Product Name-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textColor="@color/color_subtitle_text" />

    <TextView
        android:id="@+id/text_view_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/color_main_text"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/price"
        android:textColor="@color/color_subtitle_text" />

    <TextView
        android:id="@+id/text_view_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/color_main_text"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/quantity"
        android:textColor="@color/color_subtitle_text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_view_decrease_quantity"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/activity_margin"
            android:background="?android:attr/selectableItemBackground"
            android:padding="4dp"
            android:src="@drawable/ic_minus" />

        <TextView
            android:id="@+id/text_view_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:textColor="@color/color_main_text"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/image_view_increase_quantity"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_margin"
            android:background="?android:attr/selectableItemBackground"
            android:padding="4dp"
            android:src="@drawable/ic_plus" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/supplier_name"
        android:textColor="@color/color_subtitle_text" />

    <TextView
        android:id="@+id/text_view_supplier_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/color_main_text"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/supplier_phone"
        android:textColor="@color/color_subtitle_text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_supplier_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_gravity="center"
            android:textColor="@color/color_main_text"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/image_view_order"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_margin"
            android:background="?android:attr/selectableItemBackground"
            android:padding="4dp"
            android:src="@drawable/ic_call" />
    </LinearLayout>
</LinearLayout>